k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: message-app
  labels:
    name: message-app
