k8s/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: message-app
  labels:
    app: demo
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: demo
